# pico-otp

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: rust.yml
docs/: TECHNICAL.md  USB.md
json/: README.md  whitelabel-schema.json
json/test/: attr_power_int.json  basic.json  complete.json  realistic.json  utf16.json
src/: lib.rs
src/whitelabel/: binary.rs  fields.rs  mod.rs  string.rs  top.rs
src/whitelabel/auto/: mod.rs  tests.rs
