[package]
name = "pico-otp"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Generate and decode OTP data for the Raspberry Pi RP2350/Pico 2"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/piersfinlayson/pico-otp"
repository = "https://github.com/piersfinlayson/pico-otp.git"
keywords = ["raspberry-pi", "rp2350", "pico-otp", "otp"]
categories = ["embedded", "hardware-support"]
readme = "README.md"

[[bin]]
name = "pico-otp"
path = "src/bin/main.rs"

[lib]
name = "pico_otp"
path = "src/lib.rs"

[dependencies]
schemars = { version = "1.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
prettyplease = "0.2"
schemars = { version = "1.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
typify = { version = "0.5", default-features = false }

[dev-dependencies]
tempfile = "3.3"